- игрок бегающий по земле

--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="PerlinNoise.cpp" />
+    <ClCompile Include="PhysicsManager.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point2.cpp" />
     <ClCompile Include="PointLight.cpp" />
@@ -232,6 +233,7 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleEmitter.h" />
     <ClInclude Include="PerlinNoise.h" />
+    <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point2.h" />
     <ClInclude Include="PointLight.h" />
