--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -197,8 +197,10 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point2.cpp" />
     <ClCompile Include="PointLight.cpp" />
+    <ClCompile Include="Program.cpp" />
     <ClCompile Include="RandomUtils.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Shape.cpp" />
@@ -245,12 +247,15 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point2.h" />
     <ClInclude Include="PointLight.h" />
+    <ClInclude Include="Program.h" />
     <ClInclude Include="RandomUtils.h" />
     <ClInclude Include="RenderDescription.h" />
     <ClInclude Include="RenderSystem.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Shape.h" />
+    <ClInclude Include="Singleton.h" />
     <ClInclude Include="SpotLight.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Terrain.h" />
