--- a/code/Game/Game.vcxproj
+++ b/code/Game/Game.vcxproj
@@ -173,17 +173,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BaseCamera.cpp" />
     <ClCompile Include="Billboard.cpp" />
+    <ClCompile Include="Bloom.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ConverterToNormalMap.cpp" />
+    <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="CubeDepthBuffer.cpp" />
+    <ClCompile Include="DepthBuffer.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Font.cpp" />
+    <ClCompile Include="Font2.cpp" />
+    <ClCompile Include="FontRenderer.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
+    <ClCompile Include="FrameBuffer2.cpp" />
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="GLViewport.cpp" />
+    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Mesh2.cpp" />
+    <ClCompile Include="MeshBone.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Model2.cpp" />
+    <ClCompile Include="ModelAnim.cpp" />
     <ClCompile Include="Mouse2.cpp" />
+    <ClCompile Include="MultisampledFrameBuffer.cpp" />
+    <ClCompile Include="MultisampledRenderBuffer.cpp" />
     <ClCompile Include="OpenGLStateCache.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Log.cpp" />
@@ -193,17 +210,29 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="PerlinNoise.cpp" />
+    <ClCompile Include="PerlinNoise2D.cpp" />
+    <ClCompile Include="PerlinNoise3D.cpp" />
     <ClCompile Include="PhysicsManager.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point2.cpp" />
     <ClCompile Include="PointLight.cpp" />
+    <ClCompile Include="PostProcessing.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="Random.cpp" />
     <ClCompile Include="RandomUtils.cpp" />
+    <ClCompile Include="RenderBuffer.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
+    <ClCompile Include="Shadow.cpp" />
     <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="Shape2.cpp" />
+    <ClCompile Include="Skybox.cpp" />
+    <ClCompile Include="SmoothNoise2D.cpp" />
+    <ClCompile Include="SmoothNoise3D.cpp" />
     <ClCompile Include="SpotLight.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -212,58 +241,111 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Terrain.cpp" />
+    <ClCompile Include="Terrain2.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Texture2D.cpp" />
+    <ClCompile Include="TextureGenerator2D.cpp" />
+    <ClCompile Include="TextureGenerator3D.cpp" />
+    <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Water.cpp" />
+    <ClCompile Include="WaterBuffers.cpp" />
     <ClCompile Include="WGLFunc.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseCamera.h" />
     <ClInclude Include="Billboard.h" />
+    <ClInclude Include="Bloom.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ConverterToNormalMap.h" />
+    <ClInclude Include="Cube.h" />
+    <ClInclude Include="CubeDepthBuffer.h" />
     <ClInclude Include="DebugNew.h" />
+    <ClInclude Include="DepthBuffer.h" />
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="EngineDescription.h" />
     <ClInclude Include="Font.h" />
+    <ClInclude Include="Font2.h" />
+    <ClInclude Include="FontRenderer.h" />
     <ClInclude Include="Framebuffer.h" />
+    <ClInclude Include="FrameBuffer2.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="GLViewport.h" />
     <ClInclude Include="InlineFunc.h" />
+    <ClInclude Include="InterfaceCamera.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="Macros.h" />
+    <ClInclude Include="Material.h" />
+    <ClInclude Include="MaterialDecorator.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Mesh2.h" />
+    <ClInclude Include="MeshBone.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="Model2.h" />
+    <ClInclude Include="ModelAnim.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Mouse2.h" />
+    <ClInclude Include="MultisampledFrameBuffer.h" />
+    <ClInclude Include="MultisampledRenderBuffer.h" />
     <ClInclude Include="OpenGLStateCache.h" />
     <ClInclude Include="OGLFunc.h" />
+    <ClInclude Include="OrthogonalCamera.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleEmitter.h" />
+    <ClInclude Include="ParticlesGenerator.h" />
     <ClInclude Include="PerlinNoise.h" />
+    <ClInclude Include="PerlinNoise2D.h" />
+    <ClInclude Include="PerlinNoise3D.h" />
+    <ClInclude Include="PerspectiveCamera.h" />
     <ClInclude Include="PhysicsManager.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point2.h" />
     <ClInclude Include="PointLight.h" />
+    <ClInclude Include="PostProcessing.h" />
     <ClInclude Include="Program.h" />
+    <ClInclude Include="Random.h" />
     <ClInclude Include="RandomUtils.h" />
+    <ClInclude Include="Renderable.h" />
+    <ClInclude Include="RenderBuffer.h" />
     <ClInclude Include="RenderDescription.h" />
     <ClInclude Include="RenderSystem.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="ShaderProgram.h" />
+    <ClInclude Include="ShadersManager.h" />
+    <ClInclude Include="Shadow.h" />
     <ClInclude Include="Shape.h" />
+    <ClInclude Include="Shape2.h" />
     <ClInclude Include="Singleton.h" />
+    <ClInclude Include="Skybox.h" />
+    <ClInclude Include="SmoothNoise2D.h" />
+    <ClInclude Include="SmoothNoise3D.h" />
     <ClInclude Include="SpotLight.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Terrain.h" />
+    <ClInclude Include="Terrain2.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="Texture2D.h" />
+    <ClInclude Include="TextureGenerator.h" />
+    <ClInclude Include="TextureGenerator2D.h" />
+    <ClInclude Include="TextureGenerator3D.h" />
+    <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Transformation.h" />
+    <ClInclude Include="Transformationable.h" />
+    <ClInclude Include="TransformDecorator.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="Water.h" />
+    <ClInclude Include="WaterBuffers.h" />
     <ClInclude Include="WGLFunc.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="WindowDescription.h" />
