--- a/code/Game/Game.vcxproj.filters
+++ b/code/Game/Game.vcxproj.filters
@@ -164,9 +164,6 @@
     <ClCompile Include="Water.cpp">
       <Filter>engine\Render\new\renderable\water</Filter>
     </ClCompile>
-    <ClCompile Include="Scene.cpp">
-      <Filter>engine\Render\new\Scene</Filter>
-    </ClCompile>
     <ClCompile Include="Shadow.cpp">
       <Filter>engine\Render\new\Effect</Filter>
     </ClCompile>
@@ -205,6 +202,9 @@
     </ClCompile>
     <ClCompile Include="ShaderProgram.cpp">
       <Filter>engine\Render\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>engine\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -268,9 +268,6 @@
     <Filter Include="engine\Render\new">
       <UniqueIdentifier>{d6ff3ad8-1357-4d39-8270-1710b1ef6daa}</UniqueIdentifier>
     </Filter>
-    <Filter Include="engine\Render\new\Shader">
-      <UniqueIdentifier>{517ad24d-0b91-4e0b-9f43-c631c47b9fb4}</UniqueIdentifier>
-    </Filter>
     <Filter Include="engine\Render\new\Texture">
       <UniqueIdentifier>{b5e3e979-b19c-4b3f-8af3-59df9683b30a}</UniqueIdentifier>
     </Filter>
@@ -304,12 +301,6 @@
     <Filter Include="engine\Render\new\renderable\water">
       <UniqueIdentifier>{2d4314da-943d-4214-a86f-9ea5d2bc8505}</UniqueIdentifier>
     </Filter>
-    <Filter Include="engine\Render\new\Camera">
-      <UniqueIdentifier>{c7ac447d-6d3b-4940-9cfc-1025709a4c9a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="engine\Render\new\Scene">
-      <UniqueIdentifier>{52d4cc8b-9e2c-4e98-b1e6-beb9f8301e32}</UniqueIdentifier>
-    </Filter>
     <Filter Include="engine\Render\new\Effect">
       <UniqueIdentifier>{b1ed62ef-44ef-4c63-afff-46d6a771fe9c}</UniqueIdentifier>
     </Filter>
@@ -321,6 +312,9 @@
     </Filter>
     <Filter Include="engine\Render\Shader">
       <UniqueIdentifier>{d76d3bfe-e2e6-4ef2-86d6-327468f236bb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="engine\Scene">
+      <UniqueIdentifier>{daa7c5ba-4337-4b01-87f8-d24519bde0cb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -456,9 +450,6 @@
     <ClInclude Include="Texture.h">
       <Filter>engine\Render\new\Texture</Filter>
     </ClInclude>
-    <ClInclude Include="ShadersManager.h">
-      <Filter>engine\Render\new\Shader</Filter>
-    </ClInclude>
     <ClInclude Include="RenderBuffer.h">
       <Filter>engine\Render\new\FrameBuffer</Filter>
     </ClInclude>
@@ -531,9 +522,6 @@
     <ClInclude Include="Water.h">
       <Filter>engine\Render\new\renderable\water</Filter>
     </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>engine\Render\new\Scene</Filter>
-    </ClInclude>
     <ClInclude Include="Shadow.h">
       <Filter>engine\Render\new\Effect</Filter>
     </ClInclude>
@@ -578,6 +566,9 @@
     </ClInclude>
     <ClInclude Include="ShaderProgram.h">
       <Filter>engine\Render\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>engine\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
